Fix line spacing in welcome text

--- a/css/welcome.css
+++ b/css/welcome.css
@@ -14,6 +14,7 @@
     font-size: var(--font-size-800);
     color: var(--color-accent-300);
     text-align: center;
+    line-height: 5rem;
 }
 
 .welcome-scroll-button::after {
